--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
         <a class="navi" href="#contact">Sazināties</a>
       </nav>
     </div>
-
   </div>
   <div id="home" class="header">
     <div class="main-width">
@@ -49,7 +48,7 @@
 
 
 
-  <!-- ******************************** team container ************************************************ -->
+  <!-- ******************************** team container ******************************************** -->
   <div class="team-container" id="team">
     <div class="main-width">
 
@@ -366,7 +365,7 @@
   <div class="map-container">
     <iframe class=googlemap src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d17411.769135860814!2d24.075180573806474!3d56.940728880793955!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46eed025e2f742cf%3A0x9313bd5021a60430!2zUmHFhsS3YSBkYW1iaXMgMSwgWmVtZ2FsZXMgcHJpZWvFoXBpbHPEk3RhLCBSxKtnYSwgTFYtMTA0OA!5e0!3m2!1sen!2slv!4v1480974807026"
       width=100% height="600" frameborder="0" style="border:0" allowfullscreen>
-            </iframe>
+    </iframe>
   </div>
   <!-- ************************************ map container END ********************************************* -->
 
